tests/types_first_unary/types_first_unary.exp
Error --------------------------------------------------------------------------------------------------------- b.js:9:2

Cannot cast `A.P2` to `T2` because boolean [1] is incompatible with boolean literal `false` [2]. [incompatible-cast]

   b.js:9:2
   9| (A.P2: T2); // TODO compute boolean negation
       ^^^^

References:
   a.js:8:7
   8|   P2: !true,
            ^^^^^ [1]
   b.js:9:8
   9| (A.P2: T2); // TODO compute boolean negation
             ^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:11:2

Cannot cast `A.P4` to `T4` because boolean [1] is incompatible with boolean literal `true` [2]. [incompatible-cast]

   b.js:11:2
   11| (A.P4: T4); // TODO compute boolean negation
        ^^^^

References:
   a.js:10:7
   10|   P4: !!1,
             ^^^ [1]
   b.js:11:8
   11| (A.P4: T4); // TODO compute boolean negation
              ^^ [2]



Found 2 errors
